[gd_scene load_steps=7 format=2]

[ext_resource path="res://scripts/LevelSelect.gd" type="Script" id=1]
[ext_resource path="res://fonts/title.tres" type="DynamicFont" id=2]
[ext_resource path="res://fonts/small.tres" type="DynamicFont" id=3]
[ext_resource path="res://objects/Shader.tscn" type="PackedScene" id=4]

[sub_resource type="InputEventAction" id=1]
action = "gui_gotohome"

[sub_resource type="ShortCut" id=2]
shortcut = SubResource( 1 )

[node name="LevelSelect" type="CanvasLayer"]
script = ExtResource( 1 )

[node name="Margin" type="MarginContainer" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = 15.0
margin_top = 15.0
margin_right = -15.0
margin_bottom = -15.0
size_flags_horizontal = 3

[node name="VBox" type="VBoxContainer" parent="Margin"]
margin_right = 1250.0
margin_bottom = 690.0
size_flags_horizontal = 3
alignment = 1

[node name="Label_LevelSelect" type="Label" parent="Margin/VBox"]
margin_top = 274.0
margin_right = 1250.0
margin_bottom = 354.0
custom_fonts/font = ExtResource( 2 )
text = "Level Select"
align = 1

[node name="Center" type="CenterContainer" parent="Margin/VBox"]
margin_top = 358.0
margin_right = 1250.0
margin_bottom = 358.0
size_flags_horizontal = 3

[node name="LevelContainer" type="VBoxContainer" parent="Margin/VBox/Center"]
margin_left = 625.0
margin_right = 625.0
focus_neighbour_bottom = NodePath("../Button_Back")
focus_mode = 2
size_flags_vertical = 3
alignment = 1

[node name="Label_Completion" type="Label" parent="Margin/VBox"]
margin_top = 362.0
margin_right = 1250.0
margin_bottom = 384.0
custom_fonts/font = ExtResource( 3 )
text = "Total completion: 0%"
align = 1

[node name="Button_Back" type="Button" parent="Margin/VBox"]
margin_top = 388.0
margin_right = 1250.0
margin_bottom = 416.0
focus_neighbour_top = NodePath("../HBox")
custom_fonts/font = ExtResource( 3 )
shortcut = SubResource( 2 )
text = "Back"
flat = true

[node name="Shader" parent="." instance=ExtResource( 4 )]

[connection signal="pressed" from="Margin/VBox/Button_Back" to="." method="back"]
